--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'org.apache.httpcomponents:httpcore:4.4.13'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 
 
     implementation 'com.konghq:unirest-java:3.14.5'
@@ -51,5 +52,8 @@ dependencies {
 }
 
 tasks.named('test') {
+    useJUnitPlatform()
+}
+test {
     useJUnitPlatform()
 }
