--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql: true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
