--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'org.apache.httpcomponents:httpcore:4.4.13'
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
 
 // https://mvnrepository.com/artifact/com.squareup.okhttp/okhttp
     implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
