--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ConvoConvert
-
+file.upload-dir=calls
 spring.datasource.url=jdbc:mysql://localhost:3306/ConvoConvertGraduation?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
@@ -13,6 +13,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql: true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+google.credentials.file=classpath:convoconvert-428818-1025211252e0.json
+file.chunk-size=1048576
 
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
